@@ -1,6 +1,6 @@
 AUX libflashsupport-1.2-asneeded.patch 580 RMD160 d01293e8235a1e9f22fa9417079430add85c2c27 SHA1 88ada2de98fe1d566092b97da990c8fa7a675735 SHA256 d639ec064feb8065ee95dbae0e0f4faff02d140c99b990e622063cb2ed0d7a63
 AUX libflashsupport-1.2-gentoo.patch 652 RMD160 8c700ac88c9efc30a83acedd54484ec0abe115ab SHA1 1ce554fcef350d8993e969c4754ec486931b1497 SHA256 583caede29bcee5c3e2b99b17f612c051b4ff4e8268135b514adc0c5a802e64d
 DIST libflashsupport-1.2.tar.bz2 13381 RMD160 0b4936a4bf80078247ccc8f0bcca4827774768c6 SHA1 1bfd7f48ac4031c9936bf3799cf2ea615a678bca SHA256 343dd2726944adb84fe175b0f638ab078fa29fcfccb5700eb1ca34f42eaf9154
-EBUILD libflashsupport-1.2.ebuild 2341 RMD160 3e13d712b11bc1563b43791b416339b00bed1211 SHA1 3557bb32870e45203f5e8fbc68264509af140bad SHA256 45eb071b69b0f30c6ef61b6db78f8ba48d8171cdf1a74426cf7920525b3bfd9e
-MISC ChangeLog 1377 RMD160 611fa46cb74cef5cd69a73783cafa3b136bfa6d8 SHA1 b055394d8dd4755925807815e601976b669640f9 SHA256 92f7beff59dc063df9b6233faebd4633249934b76fbb4609d4d587dbb0b7ee1e
+EBUILD libflashsupport-1.2.ebuild 2746 RMD160 7171b9261b6e894517cf82c072b07119830e9505 SHA1 2d27b926cc079e4197b6d1cdcc4ae3e970f2a1f4 SHA256 34f71b0f6c06bc14fab0a931580e099aa6bcc615ea1515affc14ea7725a023a9
+MISC ChangeLog 1520 RMD160 210382e637aacccda78072b832ac2a273c45b1c6 SHA1 eccd96d5a1c17b49b6d959e057dcb0551615ff98 SHA256 1810730c186e65c2e52c83b3682eca041d75924e3e4fa5341526f54550d04035
 MISC metadata.xml 254 RMD160 1f5a6322e4956b30592a1e0caf7edc67613ecc43 SHA1 f0813ac26740fae9e0f0899b5dad74b5a6fd5b3c SHA256 740784d71bef88214e4d8508e351a376d8908f4c4b6175d98b6b77e107799f12
