@@ -1,6 +1,9 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.21 2010/05/03 13:06:09 lack Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.22 2010/05/03 15:02:33 lack Exp $
+
+  03 May 2010; Jim Ramsay <lack@gentoo.org> adobe-flash-10.0.45.2-r1.ebuild:
+  Removing libflashsupport block (Bug #300294)
 
   03 May 2010; Jim Ramsay <lack@gentoo.org> adobe-flash-10.0.45.2.ebuild,
   adobe-flash-10.0.45.2-r1.ebuild:
